<resources>
    <string name="app_name">Rukalo</string>
    <string name="title_home">Beranda</string>
    <string name="title_resep">Resep</string>
    <string name="title_cari">Cari</string>
    <string name="title_profil">Profil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="test">test</string>
    <string name="profil_tv">Profile</string>
    <string name="masuk_akun">Masuk akun</string>
    <string name="seputar_aplikasi">Seputar Aplikasi</string>
    <string name="hubungi_desa_palasari_girang">Hubungi Desa Palasari Girang</string>
    <string name="sosial_media">Email, Whatsapp, Wesbite</string>
    <string name="gambar_pesan">gambar pesan</string>
    <string name="gambar_arrow">gambar arrow</string>
    <string name="gambar_tanda_tanya">gambar tanda tanya</string>
    <string name="rukalo">Rukalo</string>
    <string name="versi">Versi 1.0</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="isi_aplikasi_rukalo">Aplikasi Rukalo adalah sebuah platform digital yang dirancang khusus untuk membantu pelaku Usaha Mikro, Kecil, dan Menengah (UMKM) dalam mengelola dan memasarkan produk-produk mereka secara efektif. Dengan menggunakan Rukalo, pengguna dapat memanfaatkan berbagai fitur yang mendukung dalam meningkatkan visibilitas dan penjualan produk UMKM mereka. Salah satu fitur utama dari Aplikasi Rukalo adalah kemampuannya dalam pemasaran produk. Melalui platform ini, para pemilik UMKM dapat mempromosikan produk mereka kepada target pasar yang tepat, meningkatkan eksposur, dan mengoptimalkan strategi pemasaran untuk mencapai hasil yang lebih baik.</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="daftar_sekarang">Daftar sekarang</string>
    <string name="masuk">Masuk</string>
    <string name="keluar">Keluar</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="sosmed">Sosial Media</string>
    <string name="facebook">Facebook</string>
    <string name="halo_foodies">Halo Foodies!</string>
    <string name="share_desc">Ayo bagiin aplikasi Rukalo ke temen kamu dengan mengklik tombol dibawah!</string>
    <string name="foto_bagikan_aplikasi">foto bagikan aplikasi</string>
    <string name="share">Bagikan</string>
    <string name="seller">Apa kamu penjual? Daftar</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="welcome_to_rukalo">Welcome to Rukalo!</string>
    <string name="desc_lengkap">Ayo temukan dan tentukan makanan favoritmu. Kami akan selalu membantumu kapanpun dan dimanapun!</string>
    <string name="gambar_logo_rukalo">gambar logo rukalo</string>
    <string name="gambar_slider">gambar slider</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_kata_sandi">Reset kata sandi</string>
    <string name="enter_email">Masukkan email yang terdaftar</string>
    <string name="kembali">kembali</string>
    <string name="reset">Reset</string>
    <string name="gambar_splash_screen">gambar splash screen</string>
    <string name="resep">Resep</string>
    <string name="ummi">UMMI Sukabumi</string>
    <string name="presented_by">Presented by</string>
    <string name="cara_menggunakan_aplikasi">Cara Menggunakan Aplikasi</string>
    <string name="cara_mendaftar_cara_membeli_cara_masuk">Cara mendaftar, cara membeli, cara masuk</string>
    <string name="tombol_arrow_enter">tombol arrow enter</string>
    <string name="tombol_keterangan">tombol keterangan</string>
    <string name="hak_cipta_aplikasi">Hak Cipta Aplikasi</string>
    <string name="nomor_haki_status_pendaftaran_hak_cipta">Nomor Haki, Status Pendaftaran Hak Cipta</string>
    <string name="informasi_lainnya">Informasi Lainnya</string>
    <string name="undang_teman">Undang Teman</string>
    <string name="cara_mengundang_teman">Cara mengundang teman</string>
    <string name="tentang_aplikasi_rukalo">Tentang Aplikasi Rukalo</string>
    <string name="gambar_ummi">gambar ummi</string>
    <string name="gambar_recyclerview">gambar recyclerview</string>
    <string name="nama_makanan">Nama makanan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="seblakbandung">Seblak Bandung adalah salah satu kuliner khas Kota Bandung yang terkenal dengan
        rasa pedas dan gurihnya. Seblak terdiri dari berbagai bahan seperti kerupuk basah, mie, sayuran, telur, dan
        daging yang dimasak dalam kuah pedas berbumbu kencur dan bawang. Kuliner ini biasanya disajikan dengan tingkat
        kepedasan yang bisa disesuaikan dengan selera, menjadikannya favorit bagi pencinta makanan pedas.
        Seblak Bandung tidak hanya lezat, tetapi juga menawarkan pengalaman kuliner yang unik dengan tekstur
        kenyal dari kerupuk dan aroma khas bumbu tradisional.</string>
    <string name="mienyemek">Mie nyemek adalah hidangan mi yang terkenal di Indonesia, terutama di daerah Jawa.
        Mie ini merupakan perpaduan antara mi goreng dan mi kuah, menciptakan tekstur yang lembap dan sedikit berkuah.
        Dengan bumbu yang kaya akan rasa gurih, manis, dan pedas, mie nyemek sering dihidangkan dengan tambahan sayuran,
        telur, dan potongan daging ayam atau bakso. Keunikan rasa dan teksturnya membuat mie nyemek menjadi favorit
        banyak orang, terutama sebagai pilihan santap malam yang hangat dan mengenyangkan.</string>
    <string name="tahuwalik">Tahu walik adalah camilan khas dari Banyuwangi, Jawa Timur, yang terkenal karena keunikannya.
        Nama "walik" berarti terbalik, dan sesuai namanya, tahu ini diolah dengan cara membalik bagian dalam tahu menjadi
        bagian luar, kemudian diisi dengan adonan daging ayam atau ikan yang gurih. Setelah diisi, tahu digoreng hingga
        kecokelatan dan renyah. Perpaduan tekstur renyah di luar dan lembut di dalam, serta cita rasa gurih dari isian daging
        membuat tahu walik menjadi favorit banyak orang. Cocok dinikmati sebagai camilan sore atau hidangan pendamping saat
        berkumpul bersama keluarga dan teman.</string>
    <string name="rotisandwich">Roti toast sandwich adalah hidangan sederhana namun lezat yang terdiri dari roti panggang diisi
        dengan berbagai bahan pilihan. Kombinasi isian seperti daging, keju, sayuran segar, dan saus memberikan cita rasa yang
        kaya dan beragam. Roti yang dipanggang hingga renyah menambah tekstur yang menggugah selera, menjadikannya pilihan sempurna
        untuk sarapan cepat, makan siang praktis, atau camilan yang memuaskan. Dengan variasi isian yang tak terbatas, roti toast
        sandwich menawarkan fleksibilitas untuk disesuaikan dengan selera dan preferensi setiap individu.</string>
    <string name="cookies">Cookies adalah makanan ringan berbentuk bulat pipih yang umumnya dibuat dari campuran tepung, gula, mentega,
        dan telur. Mereka sering kali dilengkapi dengan berbagai tambahan seperti cokelat, kacang, atau buah kering untuk memberikan variasi
        rasa dan tekstur. Cookies sangat populer di seluruh dunia dan sering disajikan sebagai camilan, baik untuk menemani secangkir teh atau
        kopi, maupun sebagai bagian dari kue kering di saat-saat spesial seperti Lebaran. Dengan rasa yang manis dan tekstur yang renyah
        atau chewy, cookies menjadi favorit banyak orang dari segala usia.
        </string>
    <string name="ciskek">Cheesecake adalah hidangan penutup yang lezat dan terkenal di seluruh dunia. Terbuat dari lapisan dasar yang
        biasanya terdiri dari remah biskuit, dan lapisan atas yang lembut dan creamy dari campuran keju krim, telur, dan gula, cheesecake
        menawarkan rasa yang kaya dan tekstur yang halus. Varian topping seperti saus buah, cokelat, atau karamel sering ditambahkan untuk
        memberikan sentuhan ekstra. Cheesecake bisa dinikmati dalam berbagai rasa, seperti vanilla, cokelat, stroberi, dan lemon,
        menjadikannya pilihan favorit untuk berbagai acara istimewa dan perayaan.</string>
    <string name="saladsayur">Salad sayur adalah hidangan sehat dan menyegarkan yang terdiri dari berbagai macam sayuran segar seperti selada,
        tomat, mentimun, wortel, dan paprika. Dikombinasikan dengan dressing yang lezat seperti vinaigrette, minyak zaitun, atau saus berbasis
        yogurt, salad sayur tidak hanya kaya akan serat, vitamin, dan mineral, tetapi juga menawarkan rasa yang nikmat dan tekstur yang beragam.
        Salad sayur sangat cocok sebagai hidangan pembuka, pelengkap makanan utama, atau bahkan sebagai santapan ringan yang menyehatkan. Dengan
        tambahan protein seperti kacang-kacangan, biji-bijian, atau potongan ayam panggang, salad sayur bisa menjadi pilihan menu yang lengkap dan bergizi.
        </string>
    <string name="chickenwings">Chicken wings, atau sayap ayam, adalah hidangan lezat yang populer di berbagai belahan dunia. Sayap ayam sering kali
        dipanggang, digoreng, atau dibakar dengan berbagai bumbu dan saus yang menggugah selera. Teksturnya yang renyah di luar dan lembut di dalam
        membuatnya menjadi favorit banyak orang. Chicken wings biasanya disajikan dengan saus celup seperti saus barbeque, saus pedas, atau saus keju,
        yang menambah kenikmatan rasa. Hidangan ini sering menjadi pilihan utama di acara pesta, pertemuan santai, atau sebagai makanan ringan saat
        menonton pertandingan olahraga. Kenikmatan chicken wings yang sederhana namun menggugah selera membuatnya menjadi salah satu comfort food yang
        tak pernah gagal memuaskan.
        </string>
    <string name="dimsum">Dimsum adalah hidangan tradisional Tiongkok yang terdiri dari berbagai macam makanan ringan yang biasanya disajikan dalam porsi
        kecil. Disajikan dalam keranjang bambu atau piring kecil, dimsum mencakup berbagai jenis pangsit, roti, dan makanan laut, baik dikukus, digoreng,
        maupun dipanggang. Dimsum biasanya dinikmati bersama teh dalam tradisi yum cha, yang berarti "minum teh". Keunikan rasa dan teksturnya, mulai dari
        lembut hingga renyah, menjadikan dimsum favorit di kalangan pecinta kuliner di seluruh dunia. Setiap suapan dimsum membawa cita rasa otentik dan
        kaya sejarah budaya Tiongkok.
        </string>
    <string name="makaroni">Macaroni schotel adalah hidangan khas yang populer di Indonesia, terutama sebagai menu pesta atau acara khusus. Hidangan
        ini terbuat dari macaroni yang dimasak dengan campuran saus creamy, biasanya berbahan dasar susu atau keju, yang kemudian dipanggang
        hingga berwarna keemasan. Sering kali, macaroni schotel diperkaya dengan bahan tambahan seperti daging sapi cincang, ayam, atau sosis,
        serta sayuran seperti wortel dan kacang polong. Tekstur lembut dari macaroni berpadu sempurna dengan lapisan keju yang renyah di atasnya,
        menciptakan cita rasa yang lezat dan memanjakan lidah. Cocok disantap hangat, macaroni schotel menjadi favorit keluarga karena kelezatannya
        yang istimewa dan cara penyajiannya yang praktis.
    </string>
    <string name="martabakmini">Martabak mini adalah versi kecil dari martabak tradisional yang populer di Indonesia. Martabak ini dikenal dengan
        ukurannya yang lebih kecil dan praktis, namun tetap kaya rasa. Dengan beragam varian, baik manis maupun gurih, martabak mini menjadi pilihan
        camilan yang sempurna untuk berbagai kesempatan. Adonan yang lembut dan berisi aneka topping seperti cokelat, keju, kacang, hingga daging cincang
        dan telur, menjadikannya favorit bagi semua kalangan. Ukurannya yang mungil membuat martabak mini mudah dinikmati tanpa perlu dipotong,
        menjadikannya hidangan yang ideal untuk acara santai maupun formal.
    </string>
</resources>